# ubon_cstuff

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  compare.py  examples.py  main.c  pyproject.toml  random_test.py  requirements.txt  scale_test.py  setup.py  test.py
cuda/: cuda_kernels.cu  cuda_stuff.c
docs/: README.md  architecture.md  overview.md
image/: image.c  image_ops.c  webcam.c
include/: audio_event.h  audio_io.h  audioframe.h  c_tests.h  config.h  cuda_kernels.h  cuda_nms.h  cuda_stuff.h  dataset.h  detections.h  display.h  embedding.h  fast_histogram.h  file_decoder.h  fiqa.h  h26x_assembler.h  h26x_file_parser.h  image.h  image_draw.h  infer.h  infer_aux.h  infer_thread.h  jpeg.h  jpeg_thread.h  kalman_tracker.h  match.h  maths_stuff.h  memory_stuff.h  misc.h  mota_metrics.h  motion_track.h  mp4_writer.h  nvof.h  pcap_decoder.h  pcap_stuff.h  platform_stuff.h  profile.h  roi.h  rtp_receiver.h  sdp_parser.h  (+8 more)
infer/: infer.c
jetson_multimedia_api/src/: NvV4l2ElementPlane.cpp
nvof/: nvOpticalFlowCommon.h  nvof.c
src/: main.c
src/apps/: audio_test.c  decode_benchmark.c  decode_file.c  default_setup.h  infer_benchmark.c  infer_thread_test.c  ml_wrapper  ml_wrapper.cpp  mock_stream_manager.py  mp4_test.c  nal_play.c  network_play.c  of_test.c  pcap_play.c  rt_benchmark.c  run_tests.c  stress_test.c  test_mlwrapper.py  track_benchmark.c  track_test.c  warp_test.c
src/audio/: audioframe.c  efficient_at_preprocess.h  efficientat_preprocess.c
src/audio_alg/: audio_event.c  efficientat_class_names.h  efficientat_mel_filter.c  efficientat_mel_filter.h  efficientat_preprocess.c  efficientat_preprocess.h  efficientat_preprocess_cuda.cu  mel_filter.c  mel_filter.h  preprocess.c  preprocess.h
src/audioframe/: audioframe.c  audioframe_alsa.c  audioframe_resampler.c  audioframe_wav_reader.c  audioframe_wav_writer.c
src/bindings/: CMakeLists.txt  ubon_pyc_util.cpp  ubon_pyc_util.h  ubon_pycstuff.cpp
src/c_tests/: c_tests.c
src/cuda/: cuda_jetson.cu  cuda_kernels.cu  cuda_kernels_convert.cu  cuda_kernels_misc.cu  cuda_kernels_nvidia.cu  cuda_kernels_scale.cu  cuda_nms.cu  cuda_stuff.c
src/decode/: simple_decoder_cuda.c  simple_decoder_jetson.c  simple_decoder_openh264.c
src/detections/: detection_debug.c  detection_match.c  detections.c  embedding.c  fiqa.c
src/image/: display.c  image.c  image_convert.c  image_draw.c  image_ops.c  image_scale.c  jpeg.c  jpeg_thread.c  webcam.c
src/infer/: dataset.c  detections.c  infer.c  infer_aux.c  infer_thread.c  match.c  trt_stuff.c  trt_stuff.h
src/log/: log.c
src/match/: match.c  match_priv.h  mota_metrics.c
src/misc/: fast_histogram.c  file_decoder.c  hash.c  kalman_tracker.c  maths_stuff.c  memory_stuff.c  misc.c  platform_stuff.c  roi_stuff.c  solvers.c  work_queue.c  yaml.c
src/motion_track/: motion_track.c
src/nvof/: nvOpticalFlowCuda.h  nvof.c  nvof_cuda.c  nvof_jetson.c
src/rtp/: h26x_assembler.c  h26x_file_parser.c  mp4_writer.c  pcap_decoder.c  pcap_stuff.c  rtp_receiver.c  sdp_parser.c
src/track/: track.c  track_aux.c  track_aux.h  track_shared.c  track_shared.h  track_stream.c  trackset.c
src/track/bytetracker/: BYTETracker.cpp  BYTETracker.h  STrack.cpp  STrack.h  dataType.h  kalmanFilter.cpp  kalmanFilter.h  lapjv.cpp  trackerUtils.cpp
src/track/utrack/: kalman.h  utrack.c  utrack.h
src/vpi/: vpi_of.c
ubon_pycstuff/: setup.py  test.py
ubon_pycstuff/src/ubon_pycstuff/: ubon_pycstuff.cpp
